@startuml
interface Agent {
    + boolean isWhite()
    + void makeMove()
    + void setGameLogic(GameLogic gameLogic)
    + void setGameState(GameState gameState)
    + void pause()
    + Agent reset()
    + void simulate()
}

class BaselineAgent {
    - boolean isWhite
    - GameLogic gameLogic
    + BaselineAgent(boolean isWhite)
    + void makeMove()
    + void setGameLogic(GameLogic gameLogic)
    + void setGameState(GameState gameState)
    + Agent reset()
}

class MLBaseLine {
    - boolean isWhite
    - GameLogic gameLogic
    - AlphaBetaAgent ABpruning
    + MLBaseLine(boolean isWhite)
    + void makeMove()
    + void setGameLogic(GameLogic gameLogic)
    + void setGameState(GameState gameState)
    + Agent reset()
}

Agent <|.. BaselineAgent
Agent <|.. MLBaseLine
MLBaseLine --> AlphaBetaAgent
@enduml
